Updated 'whanau.html' via CloudCannon

--- a/whanau.html
+++ b/whanau.html
@@ -1,7 +1,7 @@
 ---
 title: Whānau Info
-meta_title:
-description:
+meta_title: Starting at Footprints Preschool
+description: 'First day, Transition, what we do here.'
 hero_image: /uploads/hero/hero-kids-swing.jpg
 ---
 
@@ -16,43 +16,63 @@ hero_image: /uploads/hero/hero-kids-swing.jpg
                 	<blockquote>
                 		<p><strong><em>&ldquo;It takes a village to raise a child&rdquo;</em></strong></p>
                 	</blockquote>
-                	<p>Parents and whānau are very much a part of this process. We want parents to view Footprints as another home away from home &ndash; a place where they can come and relax, stay as often as they like and to be involved in their child&rsquo;s exciting learning journey. We respect and acknowledge the knowledge that parents have and can contribute and we involve them as often as possible in the centre life.&nbsp;</p>
+                	<p>We want you to view Footprints as another home away from home &ndash; a place where you can come and relax, stay as often as you like and to be involved in your child&rsquo;s exciting learning journey. We respect and acknowledge the knowledge you have about and can contribute about your child, and we like to involve you as often as possible in the life of the centre.&nbsp;</p>
+                	<h3>&nbsp;</h3>
                 	<h3>Our Rooms/Akomanga</h3>
-                	<p>Footprints is divided into two spaces: the larger Heart Room, a space for our 2-5 year olds, and inside this space, the smaller Soul Room for our infants and toddlers. The older Tuākana children in the Heart space, surround and protect the younger Teina children in the Soul Room. While they are seperate spaces (so very young children have a safe space to explore their world uninterrupted), the view between the outdoor areas connects all the children and the space visually. Children can interact freely, and older siblings can check in on younger siblings anytime.</p>
+                	<p>Footprints is divided into two spaces: the larger Heart Room, is a space for your 2-5 year old, and inside this space, the smaller Soul Room is for your infants or toddler. The older Tuākana children in the Heart space, surround and protect the younger Teina children in the Soul Room. While they are seperate spaces (so very young children have a safe space to explore their world uninterrupted), the view between the outdoor areas connects all the children and the space visually. Your child can interact freely, and older siblings can check in on younger siblings anytime.</p>
+                	<h3>&nbsp;</h3>
                 	<h3>Settling in/Tīmatanga</h3>
-                	<p>The settling process is where it all starts. We encourage parents to visit the centre as often as they like prior to the child starting. We believe that developing a trusting relationship with your child is the most important part of this process and understand that this takes time. During the settling process teachers will speak with parents about their child&rsquo;s needs and their aspirations for them.</p>
-                	<p>In the infants and toddlers room (0-2), the settling in process is especially important. This is why we work closely with parents to ensure to best possible transition. In the early stages visits are kept short, with the length of time increasing as time goes on. We encourage parents to change their child&rsquo;s nappy in front of a teacher so that we develop an understanding of what the child is used to. The next nappy change the teacher will do in the presence of the parent to ensure the child is comfortable. Likewise the parent will put their child to bed for their first sleep at the centre, and be there when they wake up, this will lessen any anxiety that the child might feel the first time. All children are more than welcome to bring special cuddly toys and items from home to help them feel secure.</p>
-                	<h3>Communication/Kōrero</h3>
-                	<p>Good communication is vital to ensure the smooth running of the centre.&nbsp; We use EDUCA (an online child portfolio software) to share important information or news along with each child's learning stories. Our private Facebook group is members only, so we can share photos of the day safely and easily, share centre updates, or new policies, and it's a nice easy way for parents to get in touch of they have any queries. We also find our centre cell phone proves very useful for day to day reminders and contact.&nbsp;</p>
-                	<p>Parents of infants are provided with daily communication books, informing them of daily routines (feeding, sleeping and nappy changes) and how their child's day went.&nbsp;</p>
-                	<p>We enjoy getting together for different events throughout the year. This is an informal chance for the Footprints whānau to build relationships with staff, and other families. Our parents/caregivers are an important voice at our centre and parent feedback is actively sort; what is important to them and their child, what our centre policies should include, and any ideas for change or development .&nbsp;</p>
+                	<p>The settling process is where it all starts. Parents can visit the centre as often as they like prior to their child starting. We believe that developing a trusting relationship with your child is the most important part of this process and understand that this takes time. During the settling process teachers will speak with you about your child&rsquo;s needs and your aspirations for them and a first day will be booked in.</p>
+                	<p>In the infant and toddler room (0-2), the settling in process is especially important. We will work closely with you to ensure the best possible transition, which will include multiple visits. We encourage you to change&nbsp; your child&rsquo;s nappy in front of a teacher, so that we develop an understanding of what your child is used to. At another visit, the teacher will change your child's nappy in your presence, to ensure your child is comfortable. We encourage you put your child to bed for their first sleep at the centre, and be there when they wake up, to lessen any anxiety that your child might feel the first time.</p>
+                	<p>Your child is welcome to bring special cuddly toys and items from home to help them feel secure throughout their day at preschool.</p>
+                	<h3>&nbsp;</h3>
+                	<h3>Getting Ready for the First Day</h3>
+                	<ul>
+                		<li>Pack a balanced and healthy lunchbox for your child&rsquo;s morning tea, lunch and afternoon tea. Your child will have access to drinking water throughout the day, but may bring their own water bottle as well, if preferred.</li>
+                		<li>Pack at least two full changes of clothes (If a child is toilet training they may require more). We foster independent dressing, and not all children will remember to place their belongings back in their bag, so please name clothing so we can help it make its way back home again.</li>
+                		<li>A seperate wet bag/swimming bag is helpful, so we can seperate wet/dirty clothes from clean clothes</li>
+                		<li>Pack enough nappies for the day (or you can drop off a box/bag for the week)</li>
+                		<li>Pack any special items needed for sleepers eg. dummy, cuddle toy, blankie</li>
+                		<li>A named sunhat needs to be supplied during the summer months.</li>
+                	</ul>
+                	<p>Please sunblock your child as they get dressed in the morning and we will reapply at key times throughout the day.</p>
+                	<p>Please let us know if you are toilet training your child, so we can provide support while they are with us at the centre.</p>
+                	<h3>&nbsp;</h3>
                 	<h3>Sleeping/E Moe</h3>
-                	<p>Footprints children have the opportunity to sleep or rest on mattresses, cots or hammocks in a quiet space. For the infants and toddlers being lulled to sleep in a shady spot outside in a hammock is very comforting. Discussions on sleep routines are always held with parents so that we can best support children with this process. Infants and toddlers will sleep throughout the day as and when required in line with parents wishes. Older children will normally be slept after lunch, but any child showing signs of tiredness will be encouraged for a sleep earlier so they have the energy for play.&nbsp;</p>
-                	<h3>Transitioning Between Rooms/ Whakawhiti</h3>
-                	<p>Transitioning between the under two&rsquo;s and the over two&rsquo;s is a consultative process. The ability and readiness of the child is taken into consideration. Discussions between teachers and parents are held prior to this process taking place. Transition always starts with short visits to the over two's area, which often leads to shared time between the two rooms, until the child is comfortable and happy to remain in the over twos. By this stage, to further support the transition one of the infants and toddlers teachers also transitions out so a comforting known person is close at hand for support when needed.&nbsp;</p>
-                	<h3>Food/Kai</h3>
-                	<p>Parent&rsquo;s supply food for the child&rsquo;s morning tea, lunch time and afternoon tea. We encourage parents to supply a balanced and healthy lunchbox. If children want to bring their own water bottle then this is fine. Children have access at all times to water jugs and glasses.</p>
-                	<h3>Clothing/Kākahu</h3>
-                	<p>Children will need sufficient clothing to last the day. Children will typically encounter various activities, the funnest of which are the messy play; including water, mud, paint, slime, clay, and much more. Parents will need to supply at least two full changes of clothing in their school bag. (If a child is toilet training they may require more). We foster independant dressing, and not all children will remember to place their belongings back in their bag, so named clothing is much more likely to make it back home again . A named sunhat also needs to be supplied during the summer months. Also sunblocking your child as they get dressed in the morning is recommended, we will reapply at key times throughout the day.</p>
-                	<p>Parents need to supply all nappies for their child. Please let us know if you are toilet training your child, as we are happy to provide as much support as possible while they are with us at the centre.</p>
-                	<h3>Birthdays/Rā whānau</h3>
-                	<p>Children and parents are welcomed to celebrate birthday (or any other important occasion/festival) at the centre. If parents wish to supply a cake or other food for the special day, then they are more than welcome to do so.</p>
-                	<h3>Learning /Ako</h3>
-                	<p>We believe that children will unfold over time, given time. This means that we value the knowledge and skills each child comes to us with, and trust that they will develop new skills, and enhance their exisiting skills, during deep engagement with their environment and their own self care. The teachers role is to set up the environment in interesting, meaningful, or thought provoking ways, so children's natural curiosity and creativity can come to life. Through thoughtful watching teachers are then able to extend children's language or support them to explore further.&nbsp; Where possible, we endeavour to extend the children's environment out into the community with small trips away from the centre, maybe to the library, a local park, to events in town, or maybe further afield.</p>
-                	<p>Children's learning at Footprints is captured in monthly Learning Stories which are shared to parents via EDUCA (an app) and can also be found in hardcopy in the Footprints library.&nbsp;</p>
+                	<p>Your child will have the opportunity to sleep or rest on a mattress, cot, or hammock in a quiet space if needed. Infants are slept on a needs basis, and toddlers/preschoolers, who require a sleep, are typically rested after lunch. We will discuss your child's sleep routine with you on enrolment, so we can provide a soothing sleep routine similar to home.&nbsp;</p>
+                	<h3>&nbsp;</h3>
+                	<h3>Learning at Preschool /Ako</h3>
+                	<p>A typical day at Footprints Preschool will see your child, on arrival, settling to a snack at the table, a chat with their key caregiver and/or waving goodbye to you through the carpark window. This part of the day is kept routine and predictable so drop off is a calm and happy time. Your child will then quickly settle into play of their choosing, inside or outside. Play continues throughout the day, only broken by mealtimes (in the Over Twos), where your child will be invited to come inside, sit at the communal dining table, and participate in the kai ritual. If your child needs a sleep, a teacher will take them into the sleep room after lunch, and sit with them as they nod off.&nbsp; Later, when they wake up, the same teacher will greet them, and wait with them until they are fully awake and ready to rejoin play. At the end of the day, you will arrive to pick up your happy child, have a quick chat about their day with key teachers, and head home, feeling secure that your child has had a great day.</p>
+                	<p>Your child is constantly learning during this free play time each day, developing their physical, academic and social skills with their peers. This development is captured in&nbsp;<em>Learning Stories.</em>&nbsp;Teachers will explain the learning they are observing in your child, and relate that to the goals of Te Whariki (the Early Childhood Curriculum Document). These stories will be shared with you via the Educa App, and in hardcopy in your child's folder in the preschool library. You are welcome to add your own family stories from life outside of preschool too.</p>
+                	<h3>&nbsp;</h3>
+                	<h3>Communication/Kōrero</h3>
+                	<p>We use Educa, Facebook, email, and the centre cellphone to keep in touch.</p>
+                	<ul>
+                		<li>EDUCA (an online child portfolio software) is used to share important information or news along with your child's learning stories.</li>
+                		<li>Our private Facebook Group is members only, so we can share photos of the day safely and easily, share centre updates, or new policies, and it's a nice easy way for you to get in touch of you have any queries.</li>
+                		<li>You can also contact us anytime via <a href="mailto:sistersinece@gmail.com">Email&nbsp;</a>&nbsp;or you can ring or text the centre cellphone 027 295 2658.&nbsp;</li>
+                	</ul>
+                	<p>Infants will also have a daily communication book, that will fill you in on daily routines (feeding, sleeping and nappy changes) at preschool, and generally how your child's day went.</p>
+                	<p>You will also find a photo book at the sign in area, a great place to see a snapshot of what happened today.</p>
+                	<h3>&nbsp;</h3>
+                	<h3>Special Celebrations/Hākari</h3>
+                	<p>Your child is welcome to celebrate birthdays (or any other important occasion/festival) at the centre. If you wish to supply a cake/food or activity for the special day just let us know and we will make arrangements with you.</p>
+                	<h3>&nbsp;</h3>
                 	<h3>Fees/Utu Whakauru (<em>updated</em> <em>2020</em>)</h3>
-                	<p>0-2 year olds&nbsp; &nbsp; Partially subsidised first 6 hours each day @ $1 per hour&nbsp; &nbsp; &nbsp;(Costs you $30 for 30 hours)</p>
-                	<p>3-5 year olds&nbsp; &nbsp; &nbsp;Fully subsidised first 6 hours each day&nbsp; &nbsp; &nbsp; (Costs you nothing for 30 hours)</p>
+                	<p>0-2 year olds:&nbsp; &nbsp; $1 per hour&nbsp; &nbsp; &nbsp;For the first 6 hours each day, then $5 per hour after that.</p>
+                	<p>3-5 year olds:&nbsp; &nbsp; &nbsp;Free&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; For the first 6 hour each day, then $5 per hour after that.</p>
                 	<p>Additional hours /Casual Rate&nbsp; &nbsp; @ $5 per hour</p>
-                	<p>There are no conditions on receiving the fees above, all children, from all families are eligible. We also accept WINZ subsidies and are happy to help you with any paperwork if you think you might qualify for one for your 0-2 year old.&nbsp;</p>
+                	<p>There are no conditions on receiving the above fees - all families are eligible.</p>
+                	<p>We also accept WINZ subsidies and are happy to help you with any paperwork if needed.</p>
+                	<h3>&nbsp;</h3>
                 	<h3>Transition to School/Haere ki te Kura</h3>
-                	<p>After growing their independence, imagination, self care skills and empathy for others, our Footprints kids are ready to head off in the big world of school and formal learning.</p>
-                	<p>As new owners of footprints, we are working on building our relationships with the local schools, and finding out what transition looks like in each school, so we can better prepare children for the changes they may encounter. We also hope to be informed so we can help parents out if they are unsure on school selection. &nbsp;Once of our staff members is a primary school teacher so is happy to answer questions about general school life, if you are encountering school for the first time.&nbsp;</p>
+                	<p>After growing their independence, imagination, self care skills and empathy for others, your child will be&nbsp; ready to head off to school and more formal learning. This does not have to be on your child's 5th Birthday if you don't think they are ready yet. As your child nears their 5th birthday please let us know about your plans, any school visits, prospective start dates, and which school you have chosen.</p>
+                	<p>This is a special time at the centre, as we celebrate your child's journey with us. We will be sad to see them leave, but so happy that they are ready to go.</p>
+                	<h3>&nbsp;</h3>
                 	<h3>Leaving/ Haere Rā</h3>
-                	<p>Please provide at least 2 weeks notice that your child is going to be moving on from the centre, this includes children going to school. Please chat to us about your plans for your 5 year old's transition to school. We are happy to help in any way we can with this process.&nbsp;</p>
-                	<p>We like to celebrate your child's last day with us in a special way (child's choice) and enjoy the memories we have shared together over your time of growth and learning at Footprints.</p>
-                	<h3>Complaints/Amuamu</h3>
-                	<p>All complaints are to be taken up with Tina Mudgway (the centre manager), in the first instance. We do our best to find a quick resolution to all complaints. If a formal complaint is to be made, parents need to do this in writing. The complaints procedure is displayed inside the front door at the centre.</p>
+                	<p>If your child will be finishing at Footprints for other reasons, we appreciate at least 2 weeks notice.&nbsp;</p>
+                	<p>We will plan a special farewell for your child, and you are welcome to contribute something special to eat, or come along for one final afternoon tea.</p>
+                	<h3>&nbsp;</h3>
                 </div>
             </div>
         
