Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 title: 'Footprints Preschool, Waihi'
-meta_title: Reconnecting your child to nature.
+meta_title: Childcare with heart
 description: >-
   “Learning impressions, lasting for life” is the core belief that the learning
   and experiences that your child will acquire at Footprints Preschool, will not
@@ -22,7 +22,7 @@ description: >-
                     	<h2>Reconnecting with Nature</h2>
                     	<p>Footprints Preschool is located near the heart of Waihi town. We are a purpose built centre with a large and varied natural outdoor environment that has been designed to encourage children to connect with nature.</p>
                     	<p>Our centre consists of two spaces.</p>
-                    	<p>The 0-2 year olds area - Our Soul Room -Here your toddler will explore the world around them in a natural grassed area, and sandpit haven, complete with water cascade. While your infant will experience plenty of new sights, smells, sounds and tastes safely inside or outside. &nbsp;</p>
+                    	<p>The 0-2 year olds area - Our Soul Room - Here your toddler will explore the world around them in a natural grassed area, and sandpit haven, complete with water cascade. While your infant will experience plenty of new sights, smells, sounds and tastes safely inside or outside. &nbsp;</p>
                     	<p>The 2-5 year old area - The Heart Room - Here your preschooler will spend much of their day outdoors, exploring and creating in the sandpit, loose parts barked area, mud kitchen, and mini stream. They will create masterpieces with art activities, build in the carpentry area or zoom around on the bikes.&nbsp;</p>
                     	<p>Our Soul Room sits within our Heart Room, so strong connections are maintained between the two spaces.</p>
                     </div>
