Updated 'fees.html' via CloudCannon

--- a/fees.html
+++ b/fees.html
@@ -16,9 +16,9 @@ hero_image: /uploads/hero/hero-jenga-blocks.jpg
                 <div class="editable">
                 	<h1 class="lead">&nbsp;</h1>
                 	<h3>Fees (as of 1 March 2020)</h3>
-                	<p>Children 0-2 years old:&nbsp; &nbsp;<strong>Partially Subsidised rate of $1 per hour </strong>- 30 hours @ $30</p>
-                	<p>Children 3-5 years old:&nbsp; &nbsp; <strong>Fully subsidised - 30 hours @ no cost</strong></p>
-                	<p>All children, all families, are eligible for the above rates up to a maximum of 6 hours per day. After that the regular rate of $5 per hour starts,</p>
+                	<p>Children 0-2 years old:&nbsp; &nbsp;<strong>$1 per hour&nbsp;</strong></p>
+                	<p>Children 3-5 years old:&nbsp; &nbsp; <strong>30 hours free&nbsp;</strong></p>
+                	<p>All children, all families, are eligible for the above rates up to a maximum of 6 hours per day. After that the regular rate of $5 per hour applies.</p>
                 	<h3>Casual Hours</h3>
                 	<p>If a child requires one off extra hours, or a one off extra day,&nbsp;<strong>the casual rate applies of $5 per hour&nbsp;</strong></p>
                 	<p>Extra days or hours need to be in consultation with the centre manager, and will be granted if space is available.</p>
