Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ description: >-
             <div class="large-8 cell">
                 <div class="blurb-content">
                     <div class="editable lead">
-                    	<h2>Reconnecting with Nature</h2>
+                    	<h2>Welcome to Footprints Preschool</h2>
                     	<p>Footprints Preschool is located near the heart of Waihi town. We are a purpose built centre with a large and varied natural outdoor environment that has been designed to encourage children to connect with nature.</p>
                     	<p>Our centre consists of two spaces.</p>
                     	<p>The 0-2 year olds area - Our Soul Room - Here your toddler will explore the world around them in a natural grassed area, and sandpit haven, complete with water cascade. While your infant will experience plenty of new sights, smells, sounds and tastes safely inside or outside. &nbsp;</p>
