Updated 'the-journey.html' via CloudCannon

--- a/the-journey.html
+++ b/the-journey.html
@@ -1,6 +1,6 @@
 ---
 title: The Journey
-description:
+description: Moving through the Centre from 0 to 5
 heading:
 hero_image: /uploads/hero/kids-beach-hands-raised.jpg
 ---
@@ -14,26 +14,27 @@ hero_image: /uploads/hero/kids-beach-hands-raised.jpg
             <div class="large-offset-2 large-8 cell">
                 <div class="editable">
                 	<h2>The Soul Room - Infants and Toddlers</h2>
-                	<p><strong><strong>The Relationship is All</strong></strong><br />Developing a relationship with children and families that is real and genuine comes before everything else. The Soul Room is a calm and nurturing environment, supported by teachers who are unhurried in their teaching practices. Children are free to explore the environment; both inside and outside. Children will enjoy long periods of uninterrupted play. The teacher&rsquo;s role in this very important process is to observe and only step in when required to do so.</p>
-                	<p>All practices in the Soul Room are guided by the Pikler Principles. Everything that happens in this room is centred around the needs of the child. Important care moments such as feeding, nappy changing and sleeping are based on the individual requirements of the child.</p>
-                	<p><strong>Feeding</strong><br />Infants are always held while being fed. They are never put into a position that they cannot get into themselves. Children are encouraged to develop their independence and can access their food when they feel hungry.</p>
-                	<p><strong>Sleeping</strong><br />In the Soul Room children have the choice of either sleeping in a cot, hammock or mattress. Discussions are held with families around the needs of the child. It is preferred that parents be present for their child&rsquo;s first sleep and be there when they awake.</p>
-                	<p><strong>Nappy changing</strong><br />Nappy changing is carried out in partnership with families. As with the sleeping routine, it is preferred that parents do their child&rsquo;s first nappy change with the teacher observing. On the second nappy change the teacher changes the nappy with the parent observing. By doing this we are ensuring that we are best meeting the needs of your child.</p>
-                	<p><strong>Primary Care</strong><br />Each child has a Primary Caregiver, who is responsible for the child&rsquo;s daily needs and communicating with parents.</p>
+                	<p>&nbsp;</p>
+                	<p><strong><strong>The Relationship is All</strong></strong><br />Developing a relationship with you and your child, that is real and genuine, comes before everything else. The Soul Room is a calm and nurturing environment, supported by teachers who are unhurried in their teaching practices. Your child will be free to explore the environment; both inside and outside. They will enjoy long periods of uninterrupted play. The teacher&rsquo;s role in this very important process is to observe and only step in when required to do so.</p>
+                	<p>All practices in the Soul Room are guided by the Pikler Principles. Everything that happens in this room is centred around the needs of your child. Important care moments such as feeding, nappy changing and sleeping are based on the individual requirements of your child.</p>
+                	<p><strong>Feeding</strong><br />Your infant will always held while being fed. They will never put into a position that they cannot get into themselves. Your child will be encouraged to develop their independence and access their own food when they feel hungry.</p>
+                	<p><strong>Sleeping</strong><br />In the Soul Room you will have a choice of either sleeping in a cot, hammock or mattress for your child's sleep. We will discuss this with you when you enrol. We encourage you to be present for your child&rsquo;s first sleep and be there when they awake.</p>
+                	<p><strong>Nappy changing</strong><br />Nappy changing is carried out in partnership with you as well. As with the sleeping routine, we value observing how you change your child's nappy the first time, so we can see what is normal for your child. On the second nappy change the teacher will change your child's nappy while you observe. By doing this we are ensuring that we are best meeting the needs of your child.</p>
+                	<p><strong>Primary Care</strong><br />Each child has a Primary Caregiver, who is responsible for your child&rsquo;s daily needs and communicating with you about your child's day.</p>
                 	<h2>&nbsp;</h2>
                 	<h2>The Heart Room - Over 2's</h2>
-                	<p>Transitioning into the Over 2's area is a process that is developed in partnership between family and teachers. The decision to transition the child to the older children's area, is based on several factors, such as the ability to manage self, communication, physical, and social competency.</p>
-                	<p>Children will initially spend a short amount of time visiting in the Over 2's area each day, before this time is extended based on how the child is finding the space. Eventually the child will be spending more and more time in the Over 2's and only retreating to the comfort of the Soul Room when needing it.</p>
-                	<p>Around this time, where possible, a Soul Room teacher will also transition out to the Over 2's area to be close by if children need a familiar face while building closer relationships with the Over 2's teachers.</p>
+                	<p>Transitioning into the Over 2's area is a process that is developed in partnership between you and teachers. The decision to transition your child to the older children's area, is based on several factors, such as their ability to manage self, communicate, their physicality, and social competency.</p>
+                	<p>Your child will initially spend a short amount of time visiting in the Over 2's area each day. This time is extended based on how your child is finding the space. Eventually your child will be spending more and more time in the Over 2's and only retreating to the comfort of the Soul Room when needing it.</p>
+                	<p>Around this time, where possible, a Soul Room teacher will also transition out to the Over 2's area to be close by if your child needs a familiar face while building closer relationships with the Over 2's teachers.</p>
                 	<h2>&nbsp;</h2>
-                	<h2>Explorers&nbsp;</h2>
-                	<p>At Footprints we are passionate about exploring nature and our wider community and what it has to offer our children. At the centre we endeavour to conduct trips for our older children so that they have the opportunity to have real life experiences. No two days are the same &ndash;one day we could be making biscuits in a caf&eacute;, the next day we could be walking along the track to Cathedral Cove in Ha Hei or spending the day at the beach or bush.</p>
-                	<p>The Explorers programme allows children to take responsibility and direction for their own learning and apply knowledge that they have gained from the centre in a different context.&nbsp;</p>
+                	<h2>Explorers - 3-5 year olds</h2>
+                	<p>At Footprints we are passionate about exploring nature and our wider community and the experiences it has to offer for your child. At the centre we endeavour to conduct trips for our older children so that they have the opportunity to have real life experiences. No two days are the same &ndash;one day your child could be making biscuits in a caf&eacute;, the next day they could be walking along the track to Cathedral Cove in Ha Hei or spending the day at the beach or bush.</p>
+                	<p>The Explorers programme allows your child to take responsibility and direction for their own learning and apply the knowledge that they have gained from the centre in a different context.&nbsp;</p>
                 	<h2>&nbsp;</h2>
                 	<h2>Transition to School</h2>
-                	<p>Transition to school is a big step in a little persons life. Good communication between parents and teachers helps us all to support the child by knowing which school the child is going to attend, and when families are enrolling their child to start.&nbsp;</p>
-                	<p>Choosing a school for the first time can be challenging, with conflicting ideas. Footprints recommends visiting a couple of schools to make enquiries and get a feel for each school. Ask about how the school supports new entrants to settle into their new environment, and if there is a program for transition (usually a&nbsp; range of organised visits). We recommend you take your child to as many of the available visits as possible. It is OK to miss preschool to go to school visits. Walk around the classrooms and have a look at the environment, will it suit your child, their interests. Some new entrant classes now have an element of play based learning (a blend between preschool and formal school), others are more academically focused and structured. There are no good or bad schools, its just about finding the best 'fit' for your child and what your family believes.</p>
-                	<p>Footprints strives to maintain good relationships with the local primary schools, and to make visits to schools where possible, to find out about their different programmes for New Entrants.</p>
+                	<p>Transition to school is a big step in a little persons life. Good communication between parents and teachers helps us all to support your child. As your child nears their 5th birthday please let us know about your plans, any school visits, prospective start dates, and which school you have chosen.</p>
+                	<p>This is a special time at the centre, as we celebrate your child's journey with us. We will be sad to see them leave, but so happy that they are ready to go.</p>
+                	<p>&nbsp;</p>
                 </div>
             </div>
         
