Updated 'fees.html' via CloudCannon

--- a/fees.html
+++ b/fees.html
@@ -20,21 +20,20 @@ hero_image: /uploads/hero/hero-jenga-blocks.jpg
                 	<p>Children 3-5 years old:&nbsp; &nbsp; <strong>30 hours free&nbsp;</strong></p>
                 	<p>All children, all families, are eligible for the above rates up to a maximum of 6 hours per day. After that the regular rate of $5 per hour applies.</p>
                 	<h3>Casual Hours</h3>
-                	<p>If a child requires one off extra hours, or a one off extra day,&nbsp;<strong>the casual rate applies of $5 per hour&nbsp;</strong></p>
+                	<p>If your child requires one off extra hours, or a one off extra day,&nbsp;<strong>the casual rate applies of $5 per hour&nbsp;</strong></p>
                 	<p>Extra days or hours need to be in consultation with the centre manager, and will be granted if space is available.</p>
                 	<h3>WINZ Subsidies</h3>
-                	<p>If you think you may qualify for a WINZ subsidy and have a 0-2year old enrolling with us, we would appreciate you applying. Centre managers are able to help parents with filling in forms if needed.</p>
+                	<p>If you think you may qualify for a WINZ subsidy and have a 0-2year old enrolling with us, we would appreciate you applying. Centre managers are able to help you with filling in forms if needed.</p>
                 	<h3>Important to Note</h3>
                 	<ul>
-                		<li>We <em>do not</em> charge for public holidays,</li>
-                		<li>We <em>do</em> charge if your child is absent for their booked times.</li>
-                		<li>We <em>may</em> charge an Early/Late charge for any children unexpectedly dropped off prior to their booking, or picked up later than their booking. Late fees are $10 per event.</li>
-                		<li>If management have been consulted and have granted the extra time (before or after your booking) you will be charged at the Casual Rate above, and <em>will not</em> incur the Early/Late charge.</li>
+                		<li>We <em>do not</em> charge for public holidays</li>
+                		<li>Charges <em>do</em> still apply if your child is absent</li>
+                		<li>We <em>may</em> charge an Early/Late fee if you drop your child off too early or are really late picking up your child and you haven't let us know.&nbsp;</li>
                 	</ul>
                 	<h3>Holidays</h3>
-                	<p>Every child may take 15 days holiday per year. When you have informed us that you are going on holiday, we will apply a 50% discount to your regular fees for the duration of your holiday.&nbsp;</p>
+                	<p>Every child may take 15 days holiday per year. If you have tell us that you are going on holiday, we can apply a 50% discount to your regular fees for the duration of your holiday.&nbsp;</p>
                 	<p>If your child is to be away for longer than 3 weeks please speak to the Centre Manager.</p>
-                	<p>Please provide 2 weeks notice for holidays.</p>
+                	<p>Please let us know as much in advance as possible if you will be taking a holiday.</p>
                 </div>
             </div>
         
