Updated 'whanau.html' via CloudCannon

--- a/whanau.html
+++ b/whanau.html
@@ -72,6 +72,9 @@ hero_image: /uploads/hero/hero-kids-swing.jpg
                 	<h3>Leaving/ Haere Rā</h3>
                 	<p>If your child will be finishing at Footprints for other reasons, we appreciate at least 2 weeks notice.&nbsp;</p>
                 	<p>We will plan a special farewell for your child, and you are welcome to contribute something special to eat, or come along for one final afternoon tea.</p>
+                	<p>&nbsp;</p>
+                	<h3><a target="_blank" href="https://www.ero.govt.nz/review-reports/footprints-preschool-05-09-2018/">Our ERO Report</a></h3>
+                	<p>ERO visits all ECE centres in New Zealand to assess how well they are meeting the needs of the children and the Childcare Regulations. Footprints last ERO review was in 2018. The next review will be in 2021.</p>
                 	<h3>&nbsp;</h3>
                 </div>
             </div>
